force-app/main/default/objects/Work__c/fields/Acceptance_criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>