force-app/main/default/objects/Work__c/fields/As_A__c.field-meta.xml
<CustomField>
    <fullName>As_A__c</fullName>
    <label>As A</label>
    <type>TextArea</type>
</CustomField>