force-app/main/default/objects/Work__c/fields/ChecklistPreparacaoDeploy__c.field-meta.xml
<CustomField>
    <fullName>ChecklistPreparacaoDeploy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado na regra de validação para liberação para teste</description>
    <inlineHelpText>Assinalar esse campo SE o pacote de deploy (ou package) estiver pronto, assim como um informativo com os passos manuais necessários pré e pós deploy</inlineHelpText>
    <label>Preparação para Deploy</label>
    <type>Checkbox</type>
</CustomField>