force-app/main/default/objects/Work__c/fields/ChecklistTesteFuncional__c.field-meta.xml
<CustomField>
    <fullName>ChecklistTesteFuncional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo usado na regra de validação para obrigar etapas antes de liberar para teste</description>
    <inlineHelpText>Assinalar esse campo SE a solução foi testada pelo responsável da entrega. Testes: via interface (se foi apenar por parametrização) e via código (se precisou desenvolver classe).</inlineHelpText>
    <label>Teste Funcional</label>
    <type>Checkbox</type>
</CustomField>