force-app/main/default/objects/Work__c/fields/CheckListTipoDesenvolvimento__c.field-meta.xml
<CustomField>
    <fullName>CheckListTipoDesenvolvimento__c</fullName>
    <label>Tipo de Desenvolvimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apenas Parametrização</fullName>
            </value>
            <value>
                <fullName>Apenas Código</fullName>
            </value>
            <value>
                <fullName>Parametrização e Código</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>