force-app/main/default/objects/Work__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>