force-app/main/default/objects/Work__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <label>% Complete</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>