force-app/main/default/objects/Work__c/fields/Contexto__c.field-meta.xml
<CustomField>
    <fullName>Contexto__c</fullName>
    <description>Detalhes relacionados à história como processo atual, regras já existentes e informações gerais de contextualização da necessidade.</description>
    <inlineHelpText>Detalhes relacionados à história como processo atual, regras já existentes e informações gerais de contextualização da necessidade.</inlineHelpText>
    <label>Contexto</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>