force-app/main/default/objects/Work__c/fields/Customizacoes__c.field-meta.xml
<CustomField>
    <fullName>Customizacoes__c</fullName>
    <label>Customizações</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>