force-app/main/default/objects/Work__c/fields/Data_de_Release__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Release__c</fullName>
    <label>Data de Release</label>
    <type>Date</type>
</CustomField>