force-app/main/default/objects/Work__c/fields/Desenvolvedor__c.field-meta.xml
<CustomField>
    <fullName>Desenvolvedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Desenvolvedor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hist_rias</relationshipName>
    <type>Lookup</type>
</CustomField>