force-app/main/default/objects/Work__c/fields/Develop_Stage__c.field-meta.xml
<CustomField>
    <fullName>Develop_Stage__c</fullName>
    <label>Develop Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technical Design</fullName>
                <default>true</default>
                <label>Technical Design</label>
            </value>
            <value>
                <fullName>Coding</fullName>
            </value>
            <value>
                <fullName>Unit Test</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>