force-app/main/default/objects/Work__c/fields/Development_Overview__c.field-meta.xml
<CustomField>
    <fullName>Development_Overview__c</fullName>
    <label>Development Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>