force-app/main/default/objects/Work__c/fields/Epico__c.field-meta.xml
<CustomField>
    <fullName>Epico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Épico</label>
    <referenceTo>Epico__c</referenceTo>
    <relationshipLabel>Histórias</relationshipLabel>
    <relationshipName>Historias</relationshipName>
    <type>Lookup</type>
</CustomField>