force-app/main/default/objects/Work__c/fields/FinalDateApproveHistory__c.field-meta.xml
<CustomField>
    <fullName>FinalDateApproveHistory__c</fullName>
    <formula>Sprint__r.FinalDateApproveHistories__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Date to Approve History</label>
    <type>Date</type>
</CustomField>