force-app/main/default/objects/Work__c/fields/Grau_de_necessidade__c.field-meta.xml
<CustomField>
    <fullName>Grau_de_necessidade__c</fullName>
    <label>Grau de necessidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
            <value>
                <fullName>Baixa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>