force-app/main/default/objects/Work__c/fields/HasImpediment__c.field-meta.xml
<CustomField>
    <fullName>HasImpediment__c</fullName>
    <formula>IF( NumberImpediments__c &gt;0, TRUE, FALSE)</formula>
    <label>Has Impediment?</label>
    <type>Checkbox</type>
</CustomField>