force-app/main/default/objects/Work__c/fields/Hrs_To_Demo__c.field-meta.xml
<CustomField>
    <fullName>Hrs_To_Demo__c</fullName>
    <description>Estimated hours of development and test effort to be ready for demo.</description>
    <inlineHelpText>Estimated hours of development and test effort to be ready for demo.</inlineHelpText>
    <label>Est Hrs to Demo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>