force-app/main/default/objects/Work__c/fields/I_Need_To__c.field-meta.xml
<CustomField>
    <fullName>I_Need_To__c</fullName>
    <label>I Need To</label>
    <type>TextArea</type>
</CustomField>