force-app/main/default/objects/Work__c/fields/Key_Users__c.field-meta.xml
<CustomField>
    <fullName>Key_Users__c</fullName>
    <description>key users que participaram das reuniões para entendimento da história</description>
    <label>Key Users</label>
    <length>400</length>
    <type>Html</type>
</CustomField>