force-app/main/default/objects/Work__c/fields/Man_Day__c.field-meta.xml
<CustomField>
    <fullName>Man_Day__c</fullName>
    <label>DEV Man Day</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>