force-app/main/default/objects/Work__c/fields/Medidores_Kpi__c.field-meta.xml
<CustomField>
    <fullName>Medidores_Kpi__c</fullName>
    <label>Medidores Kpi</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>