force-app/main/default/objects/Work__c/fields/NumberImpediments__c.field-meta.xml
<CustomField>
    <fullName>NumberImpediments__c</fullName>
    <label>Number of Impediments</label>
    <summaryFilterItems>
        <field>Impediment__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved</value>
    </summaryFilterItems>
    <summaryForeignKey>Impediment__c.Work__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>