force-app/main/default/objects/Work__c/fields/Oquefoidesenvolvidonessahistoria__c.field-meta.xml
<CustomField>
    <fullName>Oquefoidesenvolvidonessahistoria__c</fullName>
    <description>Campo utilizado para preencher com as infos dos desenvolvimentos feitos no ambiente.</description>
    <inlineHelpText>Contém todas as alterações feitas no ambiente a fim de atender o escopo da história.</inlineHelpText>
    <label>O que foi desenvolvido nessa história:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>