force-app/main/default/objects/Work__c/fields/OrdemDaExecucao__c.field-meta.xml
<CustomField>
    <fullName>OrdemDaExecucao__c</fullName>
    <label>Ordem da Execução</label>
    <length>18</length>
    <type>Text</type>
</CustomField>