force-app/main/default/objects/Work__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Solicitante da demanda (key user)</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>