force-app/main/default/objects/Work__c/fields/Percentage_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_completion__c</fullName>
    <formula>Complete__c *  Weighted_weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>