force-app/main/default/objects/Work__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>