force-app/main/default/objects/Work__c/fields/ProductBacklog__c.field-meta.xml
<CustomField>
    <fullName>ProductBacklog__c</fullName>
    <description>Indicates if the History is in the Product Backlog.</description>
    <formula>Sprint__r.ProductBacklog__c</formula>
    <label>Product Backlog</label>
    <type>Checkbox</type>
</CustomField>