force-app/main/default/objects/Work__c/fields/Relatd_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Relatd_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relatd User Story</label>
    <referenceTo>Work__c</referenceTo>
    <relationshipLabel>Relatd User Story</relationshipLabel>
    <relationshipName>Relatd_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>