force-app/main/default/objects/Work__c/fields/Requires__c.field-meta.xml
<CustomField>
    <fullName>Requires__c</fullName>
    <label>Requires</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Include In Training Plan</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>