force-app/main/default/objects/Work__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Sequence for stories construction.</description>
    <inlineHelpText>Define the sequence, in order of execution, for this story to be constructed.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>