force-app/main/default/objects/Work__c/fields/SF_User_Key_User__c.field-meta.xml
<CustomField>
    <fullName>SF_User_Key_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF User Key User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HistoriasSFUserKeyUser</relationshipName>
    <type>Lookup</type>
</CustomField>