force-app/main/default/objects/Work__c/fields/Sistemas_Envolvidos__c.field-meta.xml
<CustomField>
    <fullName>Sistemas_Envolvidos__c</fullName>
    <label>Sistemas Envolvidos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>OTM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>