force-app/main/default/objects/Work__c/fields/So_That__c.field-meta.xml
<CustomField>
    <fullName>So_That__c</fullName>
    <label>So That</label>
    <type>TextArea</type>
</CustomField>