force-app/main/default/objects/Work__c/fields/Solution_Overview__c.field-meta.xml
<CustomField>
    <fullName>Solution_Overview__c</fullName>
    <label>Solution Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>