force-app/main/default/objects/Work__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <label>Sprint</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>Histórias</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>