force-app/main/default/objects/Work__c/fields/SprintStatus__c.field-meta.xml
<CustomField>
    <fullName>SprintStatus__c</fullName>
    <formula>TEXT(Sprint__r.Status__c)</formula>
    <label>Sprint Status</label>
    <type>Text</type>
</CustomField>