force-app/main/default/objects/Work__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Implementation Start Date.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>