force-app/main/default/objects/Work__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <externalId>true</externalId>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>