force-app/main/default/objects/Work__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
                <default>true</default>
                <label>Global</label>
            </value>
            <value>
                <fullName>Tema 1</fullName>
            </value>
            <value>
                <fullName>Tema 2</fullName>
            </value>
            <value>
                <fullName>Tema 3</fullName>
            </value>
            <value>
                <fullName>Tema 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>