force-app/main/default/objects/Work__c/fields/Weighted_weight__c.field-meta.xml
<CustomField>
    <fullName>Weighted_weight__c</fullName>
    <label>Weighted weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>