force-app/main/default/objects/Work__c/fields/Work_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Status__c</fullName>
    <label>Work Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Elaboration</fullName>
            </value>
            <value>
                <fullName>Functional Refinement</fullName>
            </value>
            <value>
                <fullName>Technical Refinement</fullName>
            </value>
            <value>
                <fullName>For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Unit Tests</fullName>
            </value>
            <value>
                <fullName>UAT Test</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Error Fixed</fullName>
            </value>
            <value>
                <fullName>Reay to Deploy</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>