force-app/main/default/objects/Work__c/validationRules/APMT_AccomplishHistoryWhenSprintInPrgs.validationRule-meta.xml
<ValidationRule>
    <fullName>APMT_AccomplishHistoryWhenSprintInPrgs</fullName>
    <active>true</active>
    <description>You can only accomplish a story when the related Sprint is In Progress.</description>
    <errorConditionFormula>AND(
TEXT(Work_Status__c) == &apos;Accomplished&apos;,
NOT(SprintStatus__c ==  &apos;In Progress&apos;)
)</errorConditionFormula>
    <errorMessage>You can only accomplish a story when the related Sprint is In Progress.</errorMessage>
</ValidationRule>