force-app/main/default/objects/Work__c/validationRules/APMT_CannotChangeSequenceSprintProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>APMT_CannotChangeSequenceSprintProgress</fullName>
    <active>false</active>
    <description>You cannot change the story sequence in a sprint in progress.</description>
    <errorConditionFormula>AND(
ISCHANGED( Sequence__c ),
 SprintStatus__c == &apos;In Progress&apos;
)</errorConditionFormula>
    <errorMessage>You cannot change the story sequence in a sprint in progress.</errorMessage>
</ValidationRule>