force-app/main/default/objects/Work__c/validationRules/APMT_StoryInSprintEstimatedPoints.validationRule-meta.xml
<ValidationRule>
    <fullName>APMT_StoryInSprintEstimatedPoints</fullName>
    <active>true</active>
    <description>You need to estimate the points before inserting a story to a Sprint.</description>
    <errorConditionFormula>AND(
NOT(Sprint__r.ProductBacklog__c),
ISNULL( Points__c )
)</errorConditionFormula>
    <errorMessage>You need to estimate the points before inserting a story to a Sprint.</errorMessage>
</ValidationRule>