force-app/main/default/objects/Work__c/listViews/Current_Sprint.listView-meta.xml
<ListView>
    <fullName>Current_Sprint</fullName>
    <columns>Theme__c</columns>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Sprint__c</columns>
    <columns>Work_Status__c</columns>
    <columns>HasImpediment__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SprintStatus__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Current Sprint</label>
</ListView>