force-app/main/default/objects/Work__c/listViews/Product_Backlog.listView-meta.xml
<ListView>
    <fullName>Product_Backlog</fullName>
    <columns>NAME</columns>
    <columns>Theme__c</columns>
    <columns>Subject__c</columns>
    <columns>Points__c</columns>
    <columns>Sprint__c</columns>
    <columns>Sequence__c</columns>
    <columns>Project__c</columns>
    <columns>Work_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Test Project</value>
    </filters>
    <label>Product Backlog</label>
</ListView>