force-app/main/default/objects/Work__c/listViews/Todas_as_Hist_rias.listView-meta.xml
<ListView>
    <fullName>Todas_as_Hist_rias</fullName>
    <columns>NAME</columns>
    <columns>Theme__c</columns>
    <columns>Subject__c</columns>
    <columns>Sprint__c</columns>
    <columns>Points__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as Histórias</label>
</ListView>